syntax = "proto3";

package passenger;

option csharp_namespace = "Passengers.PassengerService.Contracts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service PassengerService {
  rpc Create (CreatePassengerRequest) returns (CreatePassengerResponse);

  rpc Ban (BanPassengerRequest) returns (BanPassengerResponse);

  rpc GetPassengers (GetPassengersRequest) returns (GetPassengersResponse);
}

message CreatePassengerRequest {
  string name = 1;
  int64 passport = 2;
  string email = 3;
  google.protobuf.Timestamp birthday = 4;
}

message CreatePassengerResponse {
}

message BanPassengerRequest {
  int64 id = 1;
}

message BanPassengerResponse {
}

message GetPassengersRequest {
  int32 cursor = 1;
  int32 page_size = 2;
  repeated int64 passenger_ids = 3;
  repeated int64 passport_ids = 4;
  repeated string emails = 5;
  google.protobuf.StringValue name = 6;
}

message GetPassengersResponse {
  repeated Passenger passengers = 1;
}

message Passenger {
  int64 passenger_id = 1;
  int64 passenger_passport = 2;
  string name = 3;
  string email = 4;
  google.protobuf.Timestamp birthday = 5;
  bool is_banned = 6;
}